fix z-index

--- a/css/new-site-header.css
+++ b/css/new-site-header.css
@@ -405,6 +405,7 @@ z-index:99999;
   position: fixed;
   top:40px;
   left:2%;
+  z-index: 99999;
 }
 
 #search-bar {
